@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #24347: Set KeyError if PyDict_GetItemWithError returns NULL.
+
 
 What's New in Python 3.5.0 beta 2?
 ==================================
